# asafer-cpp

./: .gitignore  CMakeLists.txt  README.md  progress.txt  run_null_tests.sh  run_rec_tests.sh  run_sm_tests.sh  run_tests.sh  test2.cpp  test3.cpp  test5.cpp  test6.cpp
src/: main.cpp
src/AST/: MyASTConsumer.hpp  MyASTVisitor.hpp  MyFrontendAction.hpp
src/MatchHandlers/: DataFlowHandler.hpp  DeleteExprHandler.hpp  NewExprHandler.hpp  RecursionHandler.hpp  SmartPtrHandler.hpp  VarDeclHandler.hpp  WeakPtrHandler.hpp
src/MemoryTracker/: AllocationTable.hpp
src/Test_Helpers/: StreamPrinter.hpp
test_mem/: test1.cpp  test2.cpp
test_results/: #test_ok_single_output.txt#  test_conditional_alloc_output.txt  test_double_delete_mixed_output.txt  test_ok_array_output.txt  test_ok_single_output.txt  test_uninit_delete_output.txt  test_warn_array_deleted_as_single_output.txt  test_warn_single_deleted_as_array_output.txt
tests/: README.md  test.cpp  test4.cpp  test7.cpp  test_debug.cpp
tests_leak/: CMakeCache.txt  build.ninja  cmake_install.cmake  compile_commands.json  s.sh  test1.cpp  test_leak_branch.cpp  test_leak_simple.cpp
tests_mem/: README.md  test1.cpp  test2.cpp  test3.cpp  test_conditional_alloc.cpp  test_double_delete_mixed.cpp  test_ok_array.cpp  test_ok_single.cpp  test_uninit_delete.cpp  test_warn_array_deleted_as_single.cpp  test_warn_single_deleted_as_array.cpp
tests_mem/test_null/: test_mixed.cpp  test_null_deref.cpp  test_uninit_var.cpp
tests_mem/test_rec/: test_direct_recursion.cpp  test_mutual_recursion.cpp  test_no_recursion.cpp
tests_mem/test_set2/: test_escape_call.cpp  (+3 more)
(+16 files in other folders)
